# meetiq-product-repo

./: .env.example  .gitattributes  .gitignore  README.md  SECURITY.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/auth/: current_user.py
backend/app/core/: config.py
backend/app/db/: supabase.py
backend/app/internal/: __init__.py  router.py  schemas.py  security.py
backend/app/services/: ai_meetings.py  approvals.py  assignee_resolution.py  bot_calendar_users.py  bot_events.py  bot_manual_join.py  bot_reporting.py  dashboard.py  integrations.py  meeting_chat.py  meeting_participants.py  meeting_settings.py  meetings.py  tasks.py  (+3 more)
backend/supabase/: 001_initial_schema.sql  002_seed_test_user.sql  003_task_assignees.sql  004_approval_bot_sync.sql  005_meeting_ai_chat.sql  006_meeting_task_assignee_email.sql  006_transcript_sequence.sql  007_backfill_assignee_email_from_participants.sql  008_auth_bootstrap_policies.sql  009_shared_meeting_dedupe.sql  010_uploaded_recordings.sql  011_profile_onboarding_completion.sql
backend/tests/: test_ai_meetings_service.py  test_approvals_service.py  test_assignee_resolution.py  test_bot_calendar_users.py  test_bot_manual_join_service.py  test_bot_reporting_identity.py  test_bot_reporting_service.py  test_current_user.py  test_dashboard_service.py  test_meeting_chat_service.py  test_meeting_settings_service.py  test_meetings_service.py  test_task_email.py  test_tasks_service.py  test_uploaded_recordings_service.py  test_user_bootstrap.py
(+86 files in other folders)
