[project]
name = "meetiq-backend"
version = "0.1.0"
description = "FastAPI backend for the MeetIQ productivity platform."
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.7",
    "azure-storage-blob>=12.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
